# md_converter

./: .gitignore  AUDIT.md  CLAUDE.md  LICENSE  README.md  ROADMAP.md  cli.py  config.py  create_templates.py.example  local_profiles.py.example  pyproject.toml  requirements.txt  ui.bat  ui_app.py  ui_launcher.py
converter/: __init__.py  batch_service.py  converter_service.py  errors.py  frontmatter.py  landscape_processor.py  mermaid_processor.py  pandoc_wrapper.py  paths.py  profiles.py
docs/: TEMPLATE_GUIDE.md
examples/: example.md  example_with_yaml.md
templates/: .gitkeep
tests/: __init__.py  test_batch_collisions.py  test_batch_service.py  test_cli_args.py  test_format_parsing.py  test_frontmatter.py  test_mermaid_processor.py  test_metadata_sanitizing.py  test_pandoc_wrapper_errors.py  test_paths.py  test_pdf_conversion.py  test_pdf_engine.py  test_profiles.py  test_ui_launcher.py
